--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,13 +1,19 @@
 .wrapper {
+  height: 80vh;
   position: relative;
-  padding-top: 120px;
-  padding-bottom: 80px;
-}
+  padding-top: rem(180px);
+  padding-bottom: rem(130px);
+  background-image: url(https://images.unsplash.com/photo-1573164713988-8665fc963095?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=980&q=80);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-@media (max-width: 768px) {
-  .wrapper {
-    padding-top: 80px;
-    padding-bottom: 60px;
+  @media (max-width: 576px) {
+    /* Assuming $mantine-breakpoint-xs is 576px */
+    padding-top: rem(80px);
+    padding-bottom: rem(50px);
   }
 }
 
@@ -16,77 +22,70 @@
   z-index: 1;
 }
 
-.dots {
-  position: absolute;
-  color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
-}
-
-@media (max-width: 768px) {
-  .dots {
-    display: none;
-  }
-}
-
-.dotsLeft {
-  left: 0;
-  top: 0;
-}
-
 .title {
-  text-align: center;
   font-weight: 800;
-  font-size: 40px;
-  letter-spacing: -1px;
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+  font-size: rem(40px);
+  letter-spacing: rem(-1px);
+  padding-left: var(--mantine-spacing-md);
+  padding-right: var(--mantine-spacing-md);
+  color: var(--mantine-color-white);
   margin-bottom: var(--mantine-spacing-xs);
+  text-align: center;
   font-family: Greycliff CF, var(--mantine-font-family);
-}
 
-@media (max-width: 480px) {
-  .title {
-    font-size: 28px;
+  @media (max-width: 576px) {
+    /* Assuming $mantine-breakpoint-xs is 576px */
+    font-size: rem(28px);
     text-align: left;
   }
-}
-
-.highlight {
-  color: light-dark(var(--mantine-color-blue-6), var(--mantine-color-blue-4));
 }
 
 .description {
+  color: var(--mantine-color-white);
   text-align: center;
-}
 
-@media (max-width: 480px) {
-  .description {
-    text-align: left;
+  @media (max-width: 576px) {
+    /* Assuming $mantine-breakpoint-xs is 576px */
     font-size: var(--mantine-font-size-md);
+    text-align: left;
   }
 }
 
 .controls {
-  margin-top: var(--mantine-spacing-lg);
+  margin-top: calc(var(--mantine-spacing-xl) * 1.5);
   display: flex;
   justify-content: center;
-}
+  padding-left: var(--mantine-spacing-md);
+  padding-right: var(--mantine-spacing-md);
 
-@media (max-width: 480px) {
-  .controls {
+  @media (max-width: 576px) {
+    /* Assuming $mantine-breakpoint-xs is 576px */
     flex-direction: column;
   }
 }
 
-.control:not(:first-of-type) {
-  margin-left: var(--mantine-spacing-md);
+.control {
+  height: rem(42px);
+  font-size: var(--mantine-font-size-md);
+
+  &:not(:first-of-type) {
+    margin-left: var(--mantine-spacing-md);
+  }
+
+  @media (max-width: 576px) {
+    /* Assuming $mantine-breakpoint-xs is 576px */
+    &:not(:first-of-type) {
+      margin-top: var(--mantine-spacing-md);
+      margin-left: 0;
+    }
+  }
 }
 
-@media (max-width: 480px) {
-  .control {
-    height: 42px;
-    font-size: var(--mantine-font-size-md);
-  }
-  .control:not(:first-of-type) {
-    margin-top: var(--mantine-spacing-md);
-    margin-left: 0;
+.secondaryControl {
+  color: var(--mantine-color-white);
+  background-color: rgba(255, 255, 255, 0.4);
+
+  @mixin hover {
+    background-color: rgba(255, 255, 255, 0.45);
   }
 }
