--- a/src/layouts/Dashboard.module.css
+++ b/src/layouts/Dashboard.module.css
@@ -2,6 +2,10 @@
   color: "white";
   padding: 10px 20px;
   border-radius: 10px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .navlink:hover {
