--- a/src/layouts/Dashboard.module.css
+++ b/src/layouts/Dashboard.module.css
@@ -12,3 +12,8 @@
   background-color: rgba(255, 255, 255, 0.678);
   color: black;
 }
+
+.active {
+  background-color: rgba(255, 255, 255, 0.678);
+  color: black;
+}
