--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,91 +1,63 @@
 .wrapper {
-  height: 80vh;
   position: relative;
-  padding-top: rem(180px);
-  padding-bottom: rem(130px);
-  background-image: url(https://images.unsplash.com/photo-1573164713988-8665fc963095?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=980&q=80);
+  box-sizing: border-box;
+  background-image: url("/public/Untitled\ design\(2\).png");
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  @media (max-width: 576px) {
-    /* Assuming $mantine-breakpoint-xs is 576px */
-    padding-top: rem(80px);
-    padding-bottom: rem(50px);
-  }
 }
 
 .inner {
   position: relative;
-  z-index: 1;
+  padding-top: 130px;
+  padding-bottom: 120px;
+
+  @media (max-width: 768px) {
+    padding-bottom: 80px;
+    padding-top: 80px;
+  }
 }
 
 .title {
-  font-weight: 800;
-  font-size: rem(40px);
-  letter-spacing: rem(-1px);
-  padding-left: var(--mantine-spacing-md);
-  padding-right: var(--mantine-spacing-md);
-  color: var(--mantine-color-white);
-  margin-bottom: var(--mantine-spacing-xs);
-  text-align: center;
-  font-family: Greycliff CF, var(--mantine-font-family);
+  font-family: Greycliff CF, Arial, sans-serif;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  color: #313131;
 
-  @media (max-width: 576px) {
-    /* Assuming $mantine-breakpoint-xs is 576px */
-    font-size: rem(28px);
-    text-align: left;
+  @media (max-width: 768px) {
+    font-size: 42px;
+    line-height: 1.2;
   }
 }
 
 .description {
-  color: var(--mantine-color-white);
-  text-align: center;
+  margin-top: 32px;
+  font-size: 24px;
 
-  @media (max-width: 576px) {
-    /* Assuming $mantine-breakpoint-xs is 576px */
-    font-size: var(--mantine-font-size-md);
-    text-align: left;
+  @media (max-width: 768px) {
+    font-size: 18px;
   }
 }
 
 .controls {
-  margin-top: calc(var(--mantine-spacing-xl) * 1.5);
-  display: flex;
-  justify-content: center;
-  padding-left: var(--mantine-spacing-md);
-  padding-right: var(--mantine-spacing-md);
+  margin-top: 64px;
 
-  @media (max-width: 576px) {
-    /* Assuming $mantine-breakpoint-xs is 576px */
-    flex-direction: column;
+  @media (max-width: 768px) {
+    margin-top: 32px;
   }
 }
 
 .control {
-  height: rem(42px);
-  font-size: var(--mantine-font-size-md);
+  height: 54px;
+  padding-left: 38px;
+  padding-right: 38px;
 
-  &:not(:first-of-type) {
-    margin-left: var(--mantine-spacing-md);
-  }
-
-  @media (max-width: 576px) {
-    /* Assuming $mantine-breakpoint-xs is 576px */
-    &:not(:first-of-type) {
-      margin-top: var(--mantine-spacing-md);
-      margin-left: 0;
-    }
-  }
-}
-
-.secondaryControl {
-  color: var(--mantine-color-white);
-  background-color: rgba(255, 255, 255, 0.4);
-
-  @mixin hover {
-    background-color: rgba(255, 255, 255, 0.45);
+  @media (max-width: 768px) {
+    height: 54px;
+    padding-left: 18px;
+    padding-right: 18px;
+    flex: 1;
   }
 }
